added chenges into protfolio

--- a/project/portfolio/portfolio.html
+++ b/project/portfolio/portfolio.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="/week5/portfolio/assets/styles/style.css"> 
-    <link rel="stylesheet" href="/week5/portfolio/assets/styles/normalize.css"> 
+    <link rel="stylesheet" href="/front/project/portfolio/assets/styles/style.css"> 
+    <link rel="stylesheet" href="/front/normalize.css"> 
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@500&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500&display=swap" rel="stylesheet">
@@ -23,11 +23,9 @@
             <a class="menu" href="#contacts">Contacts</a>
         </nav>
     </header>
-    <main class="main">  
-        <div class="greeting">
-            <h1>Hello, I'm Kate</h1>
-        </div>
+    <main class="main">       
         <div class="description">
+            <h1>Hello, I'm Kate</h1>
             <p>Junior-developer, junior qa-automation<br>
             Purus litora convallis nascetur duis etiam pulvinar aenean, maecenas morbi sit consequat<br>
             pellentesque ligula a vulputate, eros conubia ut fusce magnis nibh. Penatibus lorem curabitur<br>
@@ -39,7 +37,7 @@
         </div>
         
         <div class="close_to_description">
-        <img src="/week4/assets/images/me.jpg"  alt="My photo" class = "round">
+        <img src="/front/project/portfolio/assets/images/me.jpg"  alt="My photo" class = "round">
         </div>
     </main>
     <div class="button_block">
@@ -49,26 +47,22 @@
     </div>
     <section class="section">
         <div class="some_menu">
-            <div class="MyServ"><h2>My services</h2>
-            </div>
-            <div> <span class="view_all">View all</span>
-            </div>
-        </div>
-        <div class="head_of_job">
-            <div class="develop"><h2>Web development</h2></div>
-            <div class="auto"><h2>Automation</h2></div>
+            <h3>My services</h3>
+            <h4>View all</h4>
         </div>
         <div class="article_block">
-            <article class="article1">              
+            <div class="article">
+                <h2>Web development</h2>             
                 <p>Purus litora convallis nascetur duis etiam pulvinar aenean, maecenas morbi sit consequat<br>
                  pellentesque ligula a vulputate, eros conubia ut fusce magnis nibh. Penatibus lorem curabitur<br>
                 mauris ridiculus rutrum ad arcu dictumst, nostra nibh nascetur eget elementum erat venenatis,</p><br><br>
-            </article>       
-            <article class="article2">              
-             <p>Blandit maximus ridiculus parturient
-             pellentesque aliquam curabitur inceptos, augue suscipit netus posuere laoreet vehicula risus,<br>
+            </div>       
+            <div class="article"> 
+                <h2>Automation</h2>             
+                <p>Blandit maximus ridiculus parturient
+                pellentesque aliquam curabitur inceptos, augue suscipit netus posuere laoreet vehicula risus,<br>
                 cursus purus consectetorci nulla tincidunt dignissiuamabitur a consequat.</p>
-            </article>
+            </div>
         </div>
     </section>  
     <h2>works</h2>
