changed photo's name

--- a/project/fromHabr/habr.html
+++ b/project/fromHabr/habr.html
@@ -11,22 +11,22 @@
 <body>
     <div class="container">
         <div class="item1">
-            <img src="/fromHabr/assets/img/4E0744CD-793A-4EF8-B550B54F7F2C4406_source.jpg"/></div>
+            <img src="/fromHabr/assets/img/4E0744CD-793A-4EF8-B550B54F7F2C4406_source.jpg" alt="photo"/>
         </div>
         <div class="item2">
-            <img src="/fromHabr/assets/img/withDog.jpg"/></div>
+            <img src="/fromHabr/assets/img/withDog.jpg" alt="photo"/>
         </div>
         <div class="item3">
-            <img src="/fromHabr/assets/img/Без названия (1).jpg"/></div>
+            <img src="/fromHabr/assets/img/raz.jpg" alt="photo"/>
         </div>
         <div class="item4">
-            <img src="/fromHabr/assets/img/Без названия (2).jpg"/></div>
+            <img src="/fromHabr/assets/img/dva.jpg" alt="photo"/>
         </div>
         <div class="item5">
-            <img src="/fromHabr/assets/img/Без названия.jpg"/></div>
+            <img src="/fromHabr/assets/img/try.jpg" alt="photo"/>
         </div>
         <div class="item6">
-            <img src="/fromHabr/assets/img/холм.jpg"/></div>
+            <img src="/fromHabr/assets/img/холм.jpg" alt="photo"/>
         </div>
     </div>
 </body>
