--- a/project/flex's/flex.html
+++ b/project/flex's/flex.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/week5/flex's/style.css"> 
+    <link rel="stylesheet" href="/front/project/flex's/style.css"> 
 </head>
 <body class="body">
     <h1>Flexbox</h1>
