--- a/project/fromHabr/habr.html
+++ b/project/fromHabr/habr.html
@@ -4,29 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/fromHabr/assets/style.css"> 
+    <link rel="stylesheet" href="/front/project/fromHabr/assets/style.css"> 
     <link rel="stylesheet" href="/front/normalize.css"> 
     <title>Document</title>
+
 </head>
 <body>
     <div class="container">
         <div class="item1">
-            <img src="/fromHabr/assets/img/4E0744CD-793A-4EF8-B550B54F7F2C4406_source.jpg" alt="photo"/>
-        </div>
+            <img src="/front/project/fromHabr/assets/img/4E0744CD-793A-4EF8-B550B54F7F2C4406_source.jpg" alt="photo"/>
+        </div>    
         <div class="item2">
-            <img src="/fromHabr/assets/img/withDog.jpg" alt="photo"/>
+            <img src="/front/project/fromHabr/assets/img/withDog.jpg" alt="photo"/>
         </div>
         <div class="item3">
-            <img src="/fromHabr/assets/img/raz.jpg" alt="photo"/>
+            <img src="/front/project/fromHabr/assets/img/raz.jpg" alt="photo"/>
         </div>
         <div class="item4">
-            <img src="/fromHabr/assets/img/dva.jpg" alt="photo"/>
+            <img src="/front/project/fromHabr/assets/img/dva.jpg" alt="photo"/>
         </div>
         <div class="item5">
-            <img src="/fromHabr/assets/img/try.jpg" alt="photo"/>
+            <img src="/front/project/fromHabr/assets/img/try.jpg" alt="photo"/>
         </div>
         <div class="item6">
-            <img src="/fromHabr/assets/img/холм.jpg" alt="photo"/>
+            <img src="/front/project/fromHabr/assets/img/холм.jpg" alt="photo"/>
         </div>
     </div>
 </body>
