--- a/project/grid/grid.html
+++ b/project/grid/grid.html
@@ -12,32 +12,37 @@
     <div class="container">
         <header class="header">
             <h2>[Шапка страницы]</h2>
-        </header>  
-        <div class="content-1">
-            <h2>[Оновная часть]</h2>
-        </div>
-        <div class="content-2">
-            <h2>[Еще 1]</h2>
-        </div>
-        <div class="content-3">
-            <h2>[Еще 2]</h2>
-        </div>
+        </header> 
+        <main class="main">
+            <div class="content-1">
+                <h2>[Оновная часть]</h2>
+            </div>
+            <div class="content-2">
+                <h2>[Еще 1]</h2>
+            </div>
+            <div class="content-3">
+                <h2>[Еще 2]</h2>
+            </div>
+            <div class="content-4">
+                <h2>[Еще 3]</h2>
+            </div>
+        </main>    
         <aside class="sidebar">
             <h2>[Боковая область]</h2>
         </aside>  
         <footer class="footer">
-            <section class="footer_section">
+            <div class="footer_section1">
                 <h2>[Секция футера 1]</h2>
-            </section>
-            <section class="footer_section">
+            </div>
+            <div  class="footer_section2">
                 <h2>[Секция футера 2]</h2>
-            </section>
-            <section class="footer_section">
+            </div>
+            <div  class="footer_section3">
                 <h2>[Секция футера 3]</h2>
-            </section>
-            <section class="footer_section">
+            </div>
+            <div  class="footer_section4">
                 <h2>[Секция футера 4]</h2>
-            </section>
+            </div>
         </footer>
     </div>
   </body>
