--- a/project/car/car.html
+++ b/project/car/car.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/front/project/car/style.css">
-    <link rel="stylesheet" href="/front/normalize.css"> 
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../normalize.css"> 
     <title>Document</title>
 </head>
 <body>
@@ -22,14 +22,16 @@
         <main class="main">
             <div class="content-1">1</div>
             <div class="content-2">2</div>
-            <div class="content-3">3</div>
-            <div class="content-4">4</div>
             <div class="content-5">5</div>
             <div class="content-6">6</div>
-            <div class="content-7">7</div>
-            <div class="content-8">8</div>
-            <div class="content-9">9</div>
-        </main>    
+        </main> 
+        <section class="section">
+            <div><img src="img/group1/main_image.png"/></div> 
+            <div class="white-box"></div>
+            <p>Lorsdsdfsdfsd sdfsdfsdfsdfsd sdfsdfsdfsdfsdf sdfsdsdfsdf sdfsdfsd<br>
+            asasdasdkasldjajdkajsldkjalskdjlasjdklajflkjaslkfjlaksjflasfjlkajlka<br>
+            </p>               
+        </section>   
         <footer class="footer">
             <div class="something">
                 <h3>Something</h3>
