--- a/project/car/car.html
+++ b/project/car/car.html
@@ -22,16 +22,23 @@
         <main class="main">
             <div class="content-1">1</div>
             <div class="content-2">2</div>
+            <div class="content-3">3</div>
+            <div class="content-4">4</div>
             <div class="content-5">5</div>
-            <div class="content-6">6</div>
-        </main> 
+        </main>   
         <section class="section">
-            <div><img src="img/group1/main_image.png"/></div> 
-            <div class="white-box"></div>
-            <p>Lorsdsdfsdfsd sdfsdfsdfsdfsd sdfsdfsdfsdfsdf sdfsdsdfsdf sdfsdfsd<br>
-            asasdasdkasldjajdkajsldkjalskdjlasjdklajflkjaslkfjlaksjflasfjlkajlka<br>
-            </p>               
-        </section>   
+            <h6>One of Sturn's largest rings may be newer than anyone</h6>
+            <div class="section__image"><img src="img/group1/main_image.png" alt="photo"/></div> 
+            <div class="section__white-box">1</div>
+            <div class="section__text"><p>Lorsdsdfsdfsd sdfsdfsdfsdfsd sdfsdfsdfsdfsdf sdfsdsdfsdf sdfsdfsd<br>
+            asasdasdkasldjajdkajsldkjalskdjlasjdklajflkjaslkfjlaksjflasfjlkajlka<br></p></div>
+        </section>
+        <aside class="aside">
+            <div class="aside__image"><img src="img/group1/side_image.png" alt="photo"/></div> 
+            <div class="aside__white-box"></div>
+            <div class="aside__text"><p>Lorsdsdfsdfsd sdfsdfsdfsdfsd sdfsdfsdfsdfsdf sdfsdsdfsdf sdfsdfsd<br>
+            asasdasdkasldjajdkajsldkjalskdjlasjdklajflkjaslkfjlaksjflasfjlkajlka<br></p></div>  
+        </aside>
         <footer class="footer">
             <div class="something">
                 <h3>Something</h3>
@@ -55,6 +62,7 @@
                     asdasdasdadasdasda<br>
                     asdasdasdasdasdaas
                 </p></div>
-        </footer>  
+        </footer>
+    </div>   
 </body>
 </html>
