pozition was added in the car site

--- a/project/car/car.html
+++ b/project/car/car.html
@@ -34,8 +34,8 @@
             asasdasdkasldjajdkajsldkjalskdjlasjdklajflkjaslkfjlaksjflasfjlkajlka<br></p></div>
         </section>
         <aside class="aside">
-            <div class="aside__image"><img src="img/group1/side_image.png" alt="photo"/></div> 
-            <div class="aside__white-box"></div>
+            <div class="aside__image"><img src="img/aside1/Bitmap.png" alt="photo"/></div> 
+            <div class="aside__button"></div>
             <div class="aside__text"><p>Lorsdsdfsdfsd sdfsdfsdfsdfsd sdfsdfsdfsdfsdf sdfsdsdfsdf sdfsdfsd<br>
             asasdasdkasldjajdkajsldkjalskdjlasjdklajflkjaslkfjlaksjflasfjlkajlka<br></p></div>  
         </aside>
