genging of car dir from 10/03

--- a/project/car/car.html
+++ b/project/car/car.html
@@ -27,11 +27,11 @@
             <div class="content-5">5</div>
         </main>   
         <section class="section">
-            <h6>One of Sturn's largest rings may be newer than anyone</h6>
-            <div class="section__image"><img src="img/group1/main_image.png" alt="photo"/></div> 
-            <div class="section__white-box">1</div>
-            <div class="section__text"><p>Lorsdsdfsdfsd sdfsdfsdfsdfsd sdfsdfsdfsdfsdf sdfsdsdfsdf sdfsdfsd<br>
-            asasdasdkasldjajdkajsldkjalskdjlasjdklajflkjaslkfjlaksjflasfjlkajlka<br></p></div>
+                <h6>One of Sturn's largest rings may be newer than anyone</h6>
+                    <img class="section__image" src="img/group1/main_image.png" alt="photo"/> 
+                    <div class="section__white-box">1</div>
+                    <div class="section__text"><p>Lorsdsdfsdfsd sdfsdfsdfsdfsd sdfsdfsdfsdfsdf sdfsdsdfsdf sdfsdfsd<br>
+                asasdasdkasldjajdkajsldkjalskdjlasjdklajflkjaslkfjlaksjflasfjlkajlka<br></p></div>   
         </section>
         <aside class="aside">
             <div class="aside__image"><img src="img/aside1/Bitmap.png" alt="photo"/></div> 
@@ -63,6 +63,6 @@
                     asdasdasdasdasdaas
                 </p></div>
         </footer>
-    </div>   
+    </div>       
 </body>
 </html>
