--- a/project/car/car.html
+++ b/project/car/car.html
@@ -27,13 +27,13 @@
             <div class="content-5">5</div>
         </main>   
         <section class="section">
-            <subsection class="subsection">
+            <div class="subsection">
                 <h6>One of Sturn's largest rings may be newer than anyone</h6>
                 <img class="subsection__image" src="img/group1/main_image.png" alt="photo"/> 
                 <div class="subsection__white-box">1</div>
                 <div class="subsection__text"><p>Lorsdsdfsdfsd sdfsdfsdfsdfsd sdfsdfsdfsdfsdf sdfsdsdfsdf sdfsdfsd<br>
             asasdasdkasldjajdkajsldkjalskdjlasjdklajflkjaslkfjlaksjflasfjlkajlka<br></p></div>   
-            </subsection>
+            </div>
             <aside class="aside">
                 <img class="aside__image" src="img/aside1/Bitmap.png" alt="photo"/> 
                 <div class="aside__button">Continue Reading</div>
