--- a/project/bootsr/example.html
+++ b/project/bootsr/example.html
@@ -11,9 +11,9 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="container">
+    <div class="container  mt-3">
     <div class="row  align-items-center justify-content-center text-center">
-        <div class="col-8">
+        <div class="col-8 align-items-center">
             <div class="main-content">Gallery</div>
         </div>
         <div class="col-4">
