--- a/project/withBEM/withBEM.html
+++ b/project/withBEM/withBEM.html
@@ -20,51 +20,56 @@
                     </div>
             </nav>
         </header>
-        <div class="row cardsWithImage">
-            <div class="card" style="width: 18rem;">
-                <img class="card-img-top" src="img/Rectangle11.png" alt="Card image cap">
-                <div class="card-body">
-                    <h5 class="card-title">Без проводов</h5>
-                    <p class="card-text">Шлем работает без проводов. Не нужен ни компьютер, ни внешнее питание, ни большое помещение, чтобы расставить трекеры.</p>           
+        <main class="main">
+            <div class="row cardsWithImage">
+                <div class="card first">
+                    <img class="card-img-top" src="img/Rectangle11.png" alt="Card image cap">
+                    <img class="card-img-top1" src="img/praktikum31.png" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Без проводов</h5>
+                        <p class="card-text">Шлем работает без проводов. Не нужен ни компьютер, ни внешнее питание, ни большое помещение, чтобы расставить трекеры.</p>           
+                    </div>
+                </div>                
+                <div class="card">
+                    <img class="card-img-top" src="img/Rectangle11.png" alt="Card mage cap">
+                    <img class="card-img-top1" src="img/praktikum21.png" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Без компьютера</h5>
+                        <p class="card-text">Шлем работает без проводов. Не нужен ни компьютер, ни внешнее питание, ни большое помещение, чтобы расставить трекеры.</p>           
+                    </div>
+                </div>                
+                <div class="card">
+                    <img class="card-img-top" src="img/Rectangle11.png" alt="Card image cap">
+                    <img class="card-img-top1" src="img/praktikum11.png" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">До 10 часов работы</h5>
+                        <p class="card-text">Шлем работает без проводов. Не нужен ни компьютер, ни внешнее питание, ни большое помещение, чтобы расставить трекеры.</p>           
+                    </div>
+                </div>                 
+            </div>
+            <div class="row cardsWithoutImage">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Сотни игр</h5>
+                        <p class="card-text">Уже сейчас вам доступно более сотни игр: от высокобюджетных ААА-тайтлов до маленьких независимых проектов. Скоро их станет еще больше.</p>
+                    </div>
                 </div>
-            </div>                
-            <div class="card" style="width: 18rem;">
-                <img class="card-img-top" src="img/Rectangle11.png" alt="Card image cap">
-                <div class="card-body">
-                    <h5 class="card-title">Без компьютера</h5>
-                    <p class="card-text">Шлем работает без проводов. Не нужен ни компьютер, ни внешнее питание, ни большое помещение, чтобы расставить трекеры.</p>           
-                 </div>
-            </div>                
-            <div class="card" style="width: 18rem;">
-                <img class="card-img-top" src="img/Rectangle11.png" alt="Card image cap">
-                <div class="card-body">
-                    <h5 class="card-title">До 10 часов работы</h5>
-                    <p class="card-text">Шлем работает без проводов. Не нужен ни компьютер, ни внешнее питание, ни большое помещение, чтобы расставить трекеры.</p>           
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Почти даром</h5>
+                        <p class="card-text">По сравнению с другими VR-шлемами наш стоит гораздо меньше. И вы существенно экономите на мощном компьютере.</p>
+                    </div>
                 </div>
-            </div>                 
-        </div>
-        <div class="row cardsWithoutImage">
-            <div class="card" style="width: 18rem;">
-                <div class="card-body">
-                    <h5 class="card-title">Сотни игр</h5>
-                    <p class="card-text">Уже сейчас вам доступно более сотни игр: от высокобюджетных ААА-тайтлов до маленьких независимых проектов. Скоро их станет еще больше.</p>
+                <div class="card subscription d-flex">
+                    <div class="card-body"></div>
+                        <h5 class="subscription_title">Новости</h5>
+                        <input type="email" class="form-control" id="inputEmail" placeholder="Эл.почта">
+                        <button class="subscription__btn">Подписаться</button>
+                    </div>    
                 </div>
             </div>
-            <div class="card" style="width: 18rem;">
-                <div class="card-body">
-                    <h5 class="card-title">Почти даром</h5>
-                    <p class="card-text">По сравнению с другими VR-шлемами наш стоит гораздо меньше. И вы существенно экономите на мощном компьютере.</p>
-                </div>
-            </div>
-            <div class="card subscription d-flex " style="width: 18rem;">
-                <div class="card-body"></div>
-                    <h5 class="card__title">Новости</h5>
-                    <input type="email" class="form-control" id="inputEmail" placeholder="Эл.почта">
-                    <button class="subscription__btn">Подписаться</button>
-                </div>    
-            </div>
-        </div>
-        <div class="row footer">
+        </main>
+        <div class="row">
             <nav class="nav">
                 <a class="nav-link active" href="#">Возможности</a>
                 <a class="nav-link" href="#">Где купить</a>
@@ -72,8 +77,9 @@
                 <a class="nav-link" href="#">Помощь</a>
             </nav>
         </div>    
-    </div>  
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+    </div> 
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+    
 </body>
 </html>
