--- a/project/car/car.html
+++ b/project/car/car.html
@@ -27,8 +27,7 @@
             <div class="content-5">5</div>
         </main>   
         <section class="section">
-            <div class="subsection">
-                <h6>One of Sturn's largest rings may be newer than anyone</h6>
+            <div class="subsection">  
                 <img class="subsection__image" src="img/group1/main_image.png" alt="photo"/> 
                 <div class="subsection__white-box">1</div>
                 <div class="subsection__text"><p>Lorsdsdfsdfsd sdfsdfsdfsdfsd sdfsdfsdfsdfsdf sdfsdsdfsdf sdfsdfsd<br>
@@ -37,8 +36,8 @@
             <aside class="aside">
                 <img class="aside__image" src="img/aside1/Bitmap.png" alt="photo"/> 
                 <div class="aside__button">Continue Reading</div>
-                <div class="aside__text"><p>Lorsdsdfsdfsd sdfsdfsdfsdfsd sdfsdfsdfsdfsdf sdfsdsdfsdf sdfsdfsd<br>
-            asasdasdkasldjajdkajsldkjalskdjlasjdklajflkjaslkfjlaksjflasfjlkajlka<br></p></div>  
+                <div class="aside__text"><p>Ldfsdfsdfsdfsd sdfsdfsd<br>
+            ajsldkjalskdjlasjkjaslkfjlajflasfjlkajl<br></p></div>  
             </aside>
         </section>
         <footer class="footer">
