--- a/project/alertPage/index.html
+++ b/project/alertPage/index.html
@@ -113,11 +113,7 @@
             <div class="central-part__title">POLYANA</div>
             <div class="central-part__subtitle">Для тех, кто  хочет поговорить</div>
             <div class="central-button">
-                <script>
-                var name = prompt('Как тебя завут?', '');
-                alert('Привет '+ name + '!')
-                </script>
-                <button onClick="alert('Привет!')"class="central-part__btn btn">скажу привет</button>
+                <button onclick="askTheName()"class="central-part__btn btn">Нажми меня</button>
             </div>
         </div>
         <div class="arrow">
@@ -126,8 +122,11 @@
             <span></span>
         </div>
     </div>  
-    <script text="text/javascript">
-        let name = prompt('Как тебя завут?', '');
+    <script>
+        onclick = function() {
+            let name = prompt('Как тебя зовут','');
+            alert('Привет ' + name +'!');
+            }                                         
     </script> 
 </body>
 </html>
