--- a/project/alertPage/index.html
+++ b/project/alertPage/index.html
@@ -123,7 +123,7 @@
         </div>
     </div>  
     <script>
-        onclick = function() {
+        function askTheName () {
             let name = prompt('Как тебя зовут','');
             alert('Привет ' + name +'!');
             }                                         
