--- a/project/alertPage/index.html
+++ b/project/alertPage/index.html
@@ -110,12 +110,21 @@
         </div>        
         <!-- центральный блок -->
         <div class="central-part">
-            <div class="central-part__title">POLYANA</div>
+            <div class="central-part__title"  onClick ="select(this)">POLYANA</div>
             <div class="central-part__subtitle">Для тех, кто  хочет поговорить</div>
             <div class="central-button">
                 <button onclick="askTheName()"class="central-part__btn btn">Нажми меня</button>
             </div>
-        </div>
+            <div class="avatar">
+                <img src="image/Autumn_Pumpkin_Book_Foliage_573308_1280x853.jpg"  id="avatar" onclick="changeMe()" placeholder ="Аватар" >
+            </div>
+            <div class="form">
+                <input id="name" name="name" type="text" placeholder="Имя"/>
+                <input id="fname" name="fname" type="text" placeholder="Фамилия"/>
+                <input id="phone" name="phone" type="tel" placeholder="Телефон"/>
+                <input id="email" name="email" type="email" placeholder="email"/>
+            </div>  
+            <div class="down-button"><input id="submit-button" type="button" value="Сохранить" onclick="clickMe()"/></div>   
         <div class="arrow">
             <span></span>
             <span></span>
@@ -128,5 +137,6 @@
             alert('Привет ' + name +'!');
             }                                         
     </script> 
+    <script src="index.js"></script>
 </body>
 </html>
