adedd changes into registration

--- a/project/registration/index.html
+++ b/project/registration/index.html
@@ -28,7 +28,7 @@
                 <div class ="errorMessage" id="errorMessagePassword1"></div>
             </div>
             <button type="button" class = "submit" id="btn">Зарегистрироваться</button>
-            <div class="popup"></div>
+            <div class ="successMessage" id="successMessage"></div>
             <div class="signup">
                 <p>Уже есть аккаунт на Яндексе?
                 <a class="registration" href="https://passport.yandex.ru/auth?mode=register"
