--- a/project/sumInput16reduce.html
+++ b/project/sumInput16reduce.html
@@ -17,9 +17,11 @@
             arr.push(+val);   
             }
 
-        arr.reduce((a,b) => a+b);
+        let sum = arr.reduce((a,b) => a+b);
+        return sum;
     }
-    alert(sumInput());
+    alert (sumInput());
+    
 </script>
 </body>
 </html>
