--- a/project/calc16/calc16.html
+++ b/project/calc16/calc16.html
@@ -10,15 +10,15 @@
 <body>
 
     <div class ="wrapper">
-        <input class="form">
-            <header class="header">Калькулятор стоимости б/у авто</header>
+        <div class="form">
+            <header class="header"><h1>Калькулятор стоимости б/у авто</h1></header>
             <div class="fieldName"><p>Страна отправки машины</p></div>
             <select id="country" onChange="selectCountry(this.value)" class="dropdown">
                 <option value="none">Не выбрано</option>
                 <option value="gem">Германия</option>
                 <option value="amer">Америка</option>
             </select>
-            <select class="cities" style="display:none;"></select>
+            <select  id="cities" style="display: none;" class="dropdown"></select>
             <div class="fieldName"><p>Выбери тип машины</p></div>
             <select id="typeOfCar" onChange="selectType(this.value)" class="dropdown">
                 <option value="none">Не выбрано</option>
@@ -28,20 +28,19 @@
             <div class="form_radio">
                 <input id="radio-1" type="radio" name="radio" value="1">
                 <label for="radio-1">Целый автомобиль</label>
-            </div>
-            <div class="form_radio">
+
                 <input id="radio-2" type="radio" name="radio" value="2">
                 <label for="radio-2">Распил</label>
             </div>
             <div class ="checkbox">
                 <input type="checkbox" >
-                <label for="radio-1">Самовывоз</label>
+                <label for="checkbox-1">Самовывоз</label>
             </div>
-            <div>
-                <button class = "button" type="button" id="btn">Посчитать</button>
+            <div class = "button">
+                <button  type="button" class = "btn" id="btn">Посчитать</button>
             </div> 
-        </div>
-    </div> 
-<script src="calc16.js"></script>                  
+        </div>   
+    </div>
+    <script src="calc16.js"></script>                  
 </body>
 </html>
