fio17 was changed

--- a/project/FIO17/index.html
+++ b/project/FIO17/index.html
@@ -14,9 +14,9 @@
             <div class="fields">
                 <textarea class="fio" minlength="20" maxlength="50"></textarea>
                 <input type="button" class="button" value="Показать ФИО" onClick="output()">
-                <div class="fname"></div>
-                <div class="lname"></div>
-                <div class="middle_name"></div>
+                <div id = "fname" class="fname"></div>
+                <div id = "lname" class="lname"></div>
+                <div id = "middle_name" class="middle_name"></div>
             </div>
         </div>
     </div>    
