--- a/project/giphy21/index.html
+++ b/project/giphy21/index.html
@@ -31,7 +31,7 @@
             } 
             document.getElementById("giphies").innerHTML = giphyContent;
                 })
-                .catch(error => console.log(error))
+                .catch(alert("Произошел сбой"))
     }
     </script>
 </body>
